Add support for short Signal syntax to TCBScript
- Add lexer and parser for Signal in TCBScript.
- Signal now support the canonical call or the shortcut signal.connect(self.method), along with using another object instance (connecting on the instance behalf.)
- Some minor clean up.